[tool.poetry]
name = "home-air-sensors-influx-relay"
version = "0.0.1"
description = "InfluxDB relay for home air sensors like Tuya SmartAirBox or Samsung Air Purifier"
authors = [
    "Daniel Skowroński <daniel@skowron.ski>"
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/danielskowronski/home-air-sensors-influx-relay"
repository = "https://github.com/danielskowronski/home-air-sensors-influx-relay"
documentation = "https://github.com/danielskowronski/home-air-sensors-influx-relay"

keywords = ["air quality", "sensor", "influxdb"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python   = ">=3.6"
tinytuya = "^1.2"
influxdb = "^5.3"

[tool.poetry.dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
